--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -56,7 +56,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-deploy-plugin</artifactId>
             <configuration>
-               <skip>true</skip>
+               <skip>false</skip>
             </configuration>
          </plugin>
          <plugin>
