--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,7 @@
    <parent>
       <groupId>org.apache</groupId>
       <artifactId>apache</artifactId>
-      <version>18</version>
-      <relativePath>org.apache:apache</relativePath>
+      <version>18.0.0.redhat-1</version>
    </parent>
 
    <modules>
