--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
    <parent>
       <groupId>org.jboss.rh-messaging</groupId>
       <artifactId>rh-messaging-pom</artifactId>
-      <version>1.0.1</version>
+      <version>1.0.1.redhat-1</version>
    </parent>
 
    <modules>
