--- a/artemis-cli/pom.xml
+++ b/artemis-cli/pom.xml
@@ -77,6 +77,7 @@
          <artifactId>commons-lang3</artifactId>
          <version>${commons.lang.version}</version>
       </dependency>
+<!-- windows platform dependent test dependency
       <dependency>
         <groupId>com.sun.winsw</groupId>
         <artifactId>winsw</artifactId>
@@ -85,6 +86,7 @@
         <type>exe</type>
         <scope>test</scope>
       </dependency>
+-->
       <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
@@ -137,6 +139,7 @@
      </resources>
 
      <plugins>
+<!-- windows platform dependent test dependency
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
@@ -164,6 +167,7 @@
            </execution>
          </executions>
        </plugin>
+-->
      </plugins>
    </build>
 
