--- a/artemis-cli/pom.xml
+++ b/artemis-cli/pom.xml
@@ -69,6 +69,7 @@
          <groupId>io.airlift</groupId>
          <artifactId>airline</artifactId>
       </dependency>
+<!-- windows platform dependent test dependency
       <dependency>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-configuration2</artifactId>
@@ -87,6 +88,7 @@
         <type>exe</type>
         <scope>test</scope>
       </dependency>
+-->
       <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
@@ -139,6 +141,7 @@
      </resources>
 
      <plugins>
+<!-- windows platform dependent test dependency
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
@@ -166,6 +169,7 @@
            </execution>
          </executions>
        </plugin>
+-->
      </plugins>
    </build>
 
