--- a/pom.xml
+++ b/pom.xml
@@ -163,7 +163,7 @@
       <cdi-api.version>1.2</cdi-api.version>
       <geronimo-annotation_1.2_spec.version>1.0</geronimo-annotation_1.2_spec.version>
       
-      <version.org.apache.activemq.libartemis-native>${project.version}</version.org.apache.activemq.libartemis-native>
+      <version.org.apache.activemq.libartemis-native>1.5.0.redhat-1</version.org.apache.activemq.libartemis-native>
       <version.org.apache.activemq.libartemis-native-32>${version.org.apache.activemq.libartemis-native}</version.org.apache.activemq.libartemis-native-32>
       <version.org.apache.activemq.libartemis-native-64>${version.org.apache.activemq.libartemis-native}</version.org.apache.activemq.libartemis-native-64>
       
