--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,7 @@
 
       <directory-version>1.5.7</directory-version>
       
-      <version.org.apache.activemq.libartemis-native>${project.version}</version.org.apache.activemq.libartemis-native>
+      <version.org.apache.activemq.libartemis-native>1.1.0-redhat-4</version.org.apache.activemq.libartemis-native>
       <version.org.apache.activemq.libartemis-native-32>${version.org.apache.activemq.libartemis-native}</version.org.apache.activemq.libartemis-native-32>
       <version.org.apache.activemq.libartemis-native-64>${version.org.apache.activemq.libartemis-native}</version.org.apache.activemq.libartemis-native-64>
       
